# Echo_forU

./: .flake8  .gitignore  .lintstagedrc.json  LICENSE  NOTICES.md  README.md  package.json  pyproject.toml
.husky/: pre-commit
backend/: dependencies.py  main.py  requirements.txt
backend/api/: config.py  generate.py  hardware.py  history.py  models.py  tasks.py  upload.py
backend/bigvgan/: model.py
backend/diffrhythm2/: cache_utils.py  cfm.py
backend/diffrhythm2/backbones/: llama_attention.py
backend/g2p/: g2p_generation.py
backend/g2p/g2p/: __init__.py  mandarin.py  text_tokenizers.py
backend/g2p/utils/: g2p.py
backend/services/: config_service.py  file_service.py  hardware_service.py  history_service.py  inference_service.py  model_service.py  task_service.py
backend/tests/: test_hardware_service.py
backend/utils/: inference_utils.py  path_utils.py  validation.py
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
frontend/: package.json  pnpm-workspace.yaml
frontend/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/desktop/src-tauri/src/: backend.rs
frontend/shared/: index.ts  jest.config.js  package.json  tsconfig.json
frontend/web/: next.config.js  package.json  tsconfig.json
g2p/g2p/: __init__.py  text_tokenizers.py
g2p/utils/: g2p.py
scripts/: setup.ps1  setup.sh  start-backend.bat  start-backend.ps1  start-backend.sh  start-desktop.bat  start-desktop.ps1  start-desktop.sh  start-frontend.sh  start-web.bat  start-web.ps1  start-web.sh
(+44 files in other folders)
