[package]
name = "music-gen-ui-desktop"
version = "0.1.0"
description = "DiffRhythm2 Desktop Application"
authors = ["you"]
license = "Apache-2.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

